--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: The IVCTool
 email: reinhard.herzog@iosb.fraunhofer.de
 description: >- # this means to ignore newlines until "baseurl:"
-  This is the landing page for the IVCTool. It is currently only a very draft
+  This is the landing page for the IVCTool. It is currently only a early draft
   version and will be updated in the next weeks.
 baseurl: "/IVCTool/ivctool.github.io" # the subpath of your site, e.g. /blog
 url: "https://ivctool.github.io" # the base hostname & protocol for your site, e.g. http://example.com
