--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ twitter_username: ReinhardHzg
 github_username:  rhzg
 
 # Build settings
-theme: minima
+theme: jekyll-theme-architect
 plugins:
   - jekyll-feed
 
