--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   This is the landing page for the IVCTool. It is currently only a early draft
   version and will be updated in the next weeks.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://ivctool.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ReinhardHzg
 github_username:  rhzg
 
