--- a/_config.yml
+++ b/_config.yml
@@ -19,14 +19,17 @@
 # in the templates via {{ site.myvariable }}.
 
 title: The IVCTool
-email: reinhard.herzog@iosb.fraunhofer.de
+# email: reinhard.herzog@iosb.fraunhofer.de
+email: 
 description: >- # this means to ignore newlines until "baseurl:"
   This is the landing page for the IVCTool. It is currently only a early draft
   version and will be updated in the next weeks.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: ReinhardHzg
-github_username:  rhzg
+# twitter_username: ReinhardHzg
+# github_username:  rhzg
+twitter_username: 
+github_username:  
 
 # Build settings
 theme: minima
